--- a/project-3/templates/index.html
+++ b/project-3/templates/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+
+
 <html lang="en-us">
 
 <head>
   <meta charset="UTF-8">
-  <title>NBA Business</title>
+  <title>NBA Basketball Biz</title>
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -30,11 +32,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/analysis">Analysis</a>
+          <a class="nav-link" href="/analysis">Players</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/data">Data</a>
+          <a class="nav-link" href="/data">Stadiums</a>
         </li>
 
       </ul>
@@ -51,53 +53,16 @@
     <div class="col-md-7">
 
       <br>
-      <h3>Featured Movie</h3>
+      <h3>Basketball Overview</h3>
       <hr>
-      <img class="left-image" src="https://cdn.moviestillsdb.com/storage/posters/89/3480822_150.jpg">
-
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-
+      <img class="left-image" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/e3cd3a37739593.574b2cd2b1bb3.png">
+      
+      <p> 
+      The NBA is a can be very entertaining and exciting to watch. There are fans from all around the world and basketball is turning into a global sport. For our project we didn't want to focus on the game of basketball we wanted to focus on the business side of having your our NBA frachise. Many think that being an owner of a team means that you have lots of money and you can spend it as you please. There is more to being an owner then that.
       <p>
-      At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-      </p>
 
     </div>
 
-    <div class="col-md-5">
-
-      <br>
-
-      <h2>Related Movies</h3>
-      <hr>
-
-      <div class="row">
-
-        <div class="col-md-6">
-          <img class="right-images" src="https://cdn.moviestillsdb.com/storage/posters/29/1160419_150.jpg">
-        </div>
-
-        <div class="col-md-6">
-          <img class="right-images" src="https://cdn.moviestillsdb.com/storage/posters/7b/9777666_150.jpg">
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-6">
-          <br>
-          <img class="right-images" src="https://cdn.moviestillsdb.com/storage/posters/46/4154796_150.jpg">
-        </div>
-
-        <div class="col-md-6">
-          <br>
-          <img class="right-images" src="https://cdn.moviestillsdb.com/storage/posters/44/9376612_150.jpg">
-        </div>
-
-      </div>
-
-
-    </div>
 
   </div>
 
