--- a/project-3/templates/mappings.html
+++ b/project-3/templates/mappings.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
   
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -23,7 +24,7 @@
       crossorigin=""></script>
   
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="map.css">
   
   </head>
   
@@ -55,7 +56,7 @@
     <div id="map" style="width: 100%; height: 400px"></div>
   
     <!-- JavaScript file -->
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 
   <br>
