--- a/project-3/templates/mappings.html
+++ b/project-3/templates/mappings.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>NBA Basketball Biz</title>
+    <title>Stadiums Map</title>
+    <!-- Include Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+      <body>
+        <div id="map" style="height: 500px;"></div>
+        
+        <!-- Include Leaflet and Leaflet GeoJSON libraries -->
+        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/leaflet-geojson/dist/leaflet.geojson.js"></script>
+        
+        <script>
+            // JavaScript code for rendering the map and GeoJSON data will go here
+        </script>
+    </body>
+  
+
   
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
