--- a/project-3/static/css/style.css
+++ b/project-3/static/css/style.css
@@ -13,3 +13,13 @@
   font-size: 26px;
 }
 
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  width: 100%;
+  height: calc(100% - 56px);
+}
