--- a/project-3/templates/data.html
+++ b/project-3/templates/data.html
@@ -11,6 +11,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    <script>
+      google.charts.load('current', { 'packages': ['corechart'] });
+      google.charts.setOnLoadCallback(drawChart);
+  
+      function drawChart() {
+        // Set Data
+        const data = google.visualization.arrayToDataTable([
+          // Data for the bar chart...
+        ]);
+  
+        // Set Options
+        const options = {
+          title: 'TOP 10 TEAMS WITH THE HIGHEST DEBT VALUE',
+        };
+  
+        // Draw
+        const chart = new google.visualization.BarChart(document.getElementById('barChart'));
+        chart.draw(data, options);
+      }
+    </script>
+
   
   </head>
   
@@ -54,12 +76,11 @@
         <label for="years">Chart:</label>
         <br>
 
-        <select name="year" id="year" onchange="optionYearChanged(this.value)"">
-          <option value="before"">Bar Chart</option>
+        <select name="year" id="year" onchange="optionYearChanged(this.value)">
+          <option value="before">Bar Chart</option>
           <option value="after">Line Chart</option>
           <option value="after">Doughnut Chart</option>
-        </select>        
-        <div id="bar"></div>
+        </select>
 
       </div>
       <div class="col-md-6">
@@ -69,25 +90,6 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-6"> 
-
-        <label for="years">Director:</label>
-        <br>
-
-        <select name="director" id="director" onchange="optionDirectorChanged(this.value)">
-          <option value="chaplin">Charles Chaplin</option>
-          <option value="hitchcock">Alfred Hitchcock</option>
-          <option value="nolan">Christopher Nolan</option>
-          <option value="kurosawa">Akira Kurosawa</option>
-        </select>        
-
-        <div id="v-bar"></div>
-
-      </div>
-    </div>
-  
-  </div>
   <br>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
@@ -99,6 +101,67 @@
 
   <link rel="stylesheet" href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
   <script src="https:////cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+  
+  <!-- Include your existing HTML content, like the navbar, container, and other elements -->
+  
+<script>
+  const xValues = ["Phoenix Suns", "Miami Heat", "Washington Wizards", "Philadelphia 76ers", "Toronto Raptors", "Golden State Warriors", "Cleveland Cavaliers"];
+  const yValues = [50, 30, 30, 29, 25, 25, 24];
+  const barColors = [
+    "Blue",
+    "orange",
+    "pink",
+    "green",
+    "red",
+    "yellow",
+    "purple"
+  ];
+
+  new Chart("myChart", {
+    type: "bar",
+    data: {
+      labels: xValues,
+      datasets: [{
+        backgroundColor: barColors,
+        data: yValues
+      }]
+    },
+    options: {
+      legend: { display: false },
+      title: {
+        display: true,
+        text: "Top 7 Teams Whose Value Changed in the Last 1 Year"
+      }
+    }
+  });
+</script>
+
+<script>
+  const xDoughnutValues = ["Phoenix Suns", "Miami Heat", "Washington Wizards", "Philadelphia 76ers", "Toronto Raptors", "Golden State Warriors", "Cleveland Cavaliers"];
+  const yDoughnutValues = [30, 40, 20, 10, 15, 5, 8];
+  const doughnutColors = ["green", "orange", "blue", "red", "purple", "yellow", "pink"];
+
+  new Chart("doughnutChart", {
+    type: "doughnut",
+    data: {
+      labels: xDoughnutValues,
+      datasets: [{
+        backgroundColor: doughnutColors,
+        data: yDoughnutValues
+      }]
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      title: {
+        display: true,
+        text: "HIGHEST OPERATING INCOME OF 8 TEAMS"
+      }
+    }
+  });
+</script>
+</body>
+
 
   </body>
   
