--- a/project-3/templates/mappings.html
+++ b/project-3/templates/mappings.html
@@ -12,6 +12,7 @@
   
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
+
   
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -24,7 +25,7 @@
       crossorigin=""></script>
   
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="map.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   
   </head>
   
@@ -56,7 +57,7 @@
     <div id="map" style="width: 100%; height: 400px"></div>
   
     <!-- JavaScript file -->
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="map.js"></script>
   </body>
 
   <br>
