--- a/project-3/templates/index.html
+++ b/project-3/templates/index.html
@@ -32,11 +32,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/analysis">Players</a>
+          <a class="nav-link" href="/data">Players</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/data">Stadiums</a>
+          <a class="nav-link" href="/mappings">Stadiums</a>
         </li>
 
       </ul>
