--- a/project-3/templates/index.html
+++ b/project-3/templates/index.html
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/mappings">Stadiums</a>
+          <a class="nav-link" href="/stadiums">Stadiums</a>
         </li>
 
       </ul>
