--- a/project-3/templates/data.html
+++ b/project-3/templates/data.html
@@ -76,10 +76,10 @@
         <label for="years">Chart:</label>
         <br>
 
-        <select name="year" id="year" onchange="optionYearChanged(this.value)">
-          <option value="before">Bar Chart</option>
-          <option value="after">Line Chart</option>
-          <option value="after">Doughnut Chart</option>
+        <select name="basketball_data" id="basketball_data" onchange="selectTeam(this.value)">
+          <option value="bar">Bar Chart</option>
+          <option value="line">Line Chart</option>
+          <option value="doughnut">Doughnut Chart</option>
         </select>
 
       </div>
@@ -91,6 +91,11 @@
     </div>
 
   <br>
+
+  <div id = "myChart"> 
+
+
+  </div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
 
@@ -104,38 +109,6 @@
   
   <!-- Include your existing HTML content, like the navbar, container, and other elements -->
   
-<script>
-  const xValues = ["Phoenix Suns", "Miami Heat", "Washington Wizards", "Philadelphia 76ers", "Toronto Raptors", "Golden State Warriors", "Cleveland Cavaliers"];
-  const yValues = [50, 30, 30, 29, 25, 25, 24];
-  const barColors = [
-    "Blue",
-    "orange",
-    "pink",
-    "green",
-    "red",
-    "yellow",
-    "purple"
-  ];
-
-  new Chart("myChart", {
-    type: "bar",
-    data: {
-      labels: xValues,
-      datasets: [{
-        backgroundColor: barColors,
-        data: yValues
-      }]
-    },
-    options: {
-      legend: { display: false },
-      title: {
-        display: true,
-        text: "Top 7 Teams Whose Value Changed in the Last 1 Year"
-      }
-    }
-  });
-</script>
-
 <script>
   const xDoughnutValues = ["Phoenix Suns", "Miami Heat", "Washington Wizards", "Philadelphia 76ers", "Toronto Raptors", "Golden State Warriors", "Cleveland Cavaliers"];
   const yDoughnutValues = [30, 40, 20, 10, 15, 5, 8];
