--- a/project-3/templates/mappings.html
+++ b/project-3/templates/mappings.html
@@ -6,17 +6,14 @@
     <title>Stadiums Map</title>
     <!-- Include Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-      <body>
-        <div id="map" style="height: 500px;"></div>
+        
         
         <!-- Include Leaflet and Leaflet GeoJSON libraries -->
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/leaflet-geojson/dist/leaflet.geojson.js"></script>
         
-        <script>
-            // JavaScript code for rendering the map and GeoJSON data will go here
-        </script>
-    </body>
+    
+    
   
 
   
@@ -62,7 +59,7 @@
               <a class="nav-link active" aria-current="page" href="/analysis">Players</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/data">Stadiums</a>
+              <a class="nav-link" href="/stadiums">Stadiums</a>
             </li>
           </ul>
         </div>
@@ -73,7 +70,7 @@
     <div id="map" style="width: 100%; height: 400px"></div>
   
     <!-- JavaScript file -->
-    <script type="text/javascript" src="map.js"></script>
+    
   </body>
 
   <br>
@@ -84,6 +81,8 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/map.js') }}"></script>
   </body>
   
   </html>
