--- a/project-3/templates/data.html
+++ b/project-3/templates/data.html
@@ -40,7 +40,7 @@
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Basketball</a>
+      <a class="navbar-brand" href="/">Business of NBA Basketball</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -51,11 +51,11 @@
           </li>
             
           <li class="nav-item">
-            <a class="nav-link" href="/analysis">Players</a>
+            <a class="nav-link" href="/data">Charts</a>
           </li>
   
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/data">Stadiums</a>
+            <a class="nav-link active" aria-current="page" href="/stadiums">Stadiums</a>
           </li>
   
         </ul>
@@ -92,6 +92,7 @@
 
   <br>
 
+  
   <div id = "myChart"> 
 
 
