--- a/project-3/templates/index.html
+++ b/project-3/templates/index.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Basketball</a>
+    <a class="navbar-brand" href="/">Business of NBA Basketball</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -58,7 +58,7 @@
       <img class="left-image" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/e3cd3a37739593.574b2cd2b1bb3.png">
       
       <p> 
-      The NBA is a can be very entertaining and exciting to watch. There are fans from all around the world and basketball is turning into a global sport. For our project we didn't want to focus on the game of basketball we wanted to focus on the business side of having your our NBA franchise. Many think that being an owner of a team means that you have lots of money and you can spend it as you please. There is more to being an owner then that.
+      The NBA is a very entertaining and exciting league to watch. There are fans from all around the world and basketball has become a global sport. For our project we didn't want to focus on the game of basketball we wanted to focus on the business side of having your own NBA franchise. Many think that being an owner of a team means that you have lots of money and you can spend it as you please. There is more to being an owner then that.
       <p>
 
     </div>
