--- a/project-3/templates/mappings.html
+++ b/project-3/templates/mappings.html
@@ -46,7 +46,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Basketball</a>
+        <a class="navbar-brand" href="/">Stadium Map</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -56,7 +56,7 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/analysis">Players</a>
+              <a class="nav-link active" aria-current="page" href="/data">Charts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/stadiums">Stadiums</a>
@@ -67,7 +67,7 @@
     </nav>
   
     <!-- The div where we'll insert our map -->
-    <div id="map" style="width: 100%; height: 400px"></div>
+    <div id="map" style="width: 100%; height: 800px"></div>
   
     <!-- JavaScript file -->
     
